--- a/app/views/microposts/index.html.erb
+++ b/app/views/microposts/index.html.erb
@@ -22,4 +22,5 @@
 
 <br />
 
-<%= link_to 'New Micropost', new_micropost_path %>
+<b><%= link_to 'new posting', new_micropost_path %>
+<%= link_to 'back', say_hello_path %></b>
